--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".JanelaTres_Activity"></activity>
-        <activity android:name=".JanelaDois_Activity" android:theme="@style/TemaSemBarra" />
-        <activity android:name=".MainActivity" android:theme="@style/TemaSemBarra">
+        <activity
+            android:name=".JanelaDois_Activity"
+
+            android:theme="@style/TemaSemBarra">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/TemaSemBarra">
+
         </activity>
     </application>
 
